# clapp

./: .clang-format  CMakeLists.txt  README.md
res/: clapp.h  clapp.rc  manifest.xml
src/: clapp.cpp  rtl.cpp
src/clapp/: app.cpp  app.hpp  context.cpp  context.hpp  font.cpp  font.hpp  hud.cpp  hud.hpp  renderer.cpp  renderer.hpp  settings.cpp  settings.hpp
